@@ -48,6 +48,7 @@
             Added ability to compile Espruino to JavaScript with Emscripten
             Allow g.setColor/setBgColor to take hex Strings of the form `'#00ff00'`
             Bangle.js: Added heart rate autocorrelation, setHRMPower and 'HRM' event
+            Bangle.js: New 120x120 and 80x80 high speed buffered modes
 
      2v04 : Allow \1..\9 escape codes in RegExp
             ESP8266: reading storage is not working for boot from user2 (fix #1507)
